[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "as2805-msg"
version = "0.1.0"
description = "Encode and decode AS2805.2 financial messages"
requires-python = ">=3.10"
license = "MIT"

[tool.setuptools.packages.find]
include = ["as2805_msg*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
